--- a/index.html
+++ b/index.html
@@ -38,14 +38,59 @@
 
       <div class="summary">
         <div class="summary_wrap">
-          <h3>Summary</h3>
+          <h3 class="summary_title">Summary</h3>
           <div class="summary_cate">
-            Reaction 80 / 100 
-            Memory 92 / 100 
-            Verbal 61 / 100 
-            Visual 72 / 100
+
+            <div class="cate_category cate_category--red">
+              <div class="category_heading">
+                <img src="./assets/images/icon-reaction.svg" alt="reaction icon" />
+                <p>Reaction</p>
+              </div>
+              <div class="category_score">
+                <span>80</span>
+                <span>/</span>
+                <span>100</span>
+              </div>
+            </div>
+
+            <div class="cate_category cate_category--yellow">
+              <div class="category_heading">
+                <img src="./assets/images/icon-memory.svg" alt="memory icon" />
+                <p>Memory</p>
+              </div>
+              <div class="category_score">
+                <span>92</span>
+                <span>/</span>
+                <span>100</span>
+              </div>
+            </div>
+
+            <div class="cate_category cate_category--green">
+              <div class="category_heading">
+                <img src="./assets/images/icon-verbal.svg" alt="verbal icon" />
+                <p>Verbal</p>
+              </div>
+              <div class="category_score">
+                <span>61</span>
+                <span>/</span>
+                <span>100</span>
+              </div>
+            </div>
+
+            <div class="cate_category cate_category--blue">
+              <div class="category_heading">
+                <img src="./assets/images/icon-visual.svg" alt="visual icon" />
+                <p>Visual</p>
+              </div>
+              <div class="category_score">
+                <span>72</span>
+                <span>/</span>
+                <span>100</span>
+              </div>
+            </div>
+
           </div>
-          <button>Continue</button>
+          <button class="btn_continue">Continue</button>
         </div>
       </div>
     </div>
