--- a/index.html
+++ b/index.html
@@ -53,42 +53,6 @@
               </div>
             </div>
 
-            <div class="cate_category cate_category--yellow">
-              <div class="category_heading">
-                <img src="./assets/images/icon-memory.svg" alt="memory icon" />
-                <p>Memory</p>
-              </div>
-              <div class="category_score">
-                <span>92</span>
-                <span>/</span>
-                <span>100</span>
-              </div>
-            </div>
-
-            <div class="cate_category cate_category--green">
-              <div class="category_heading">
-                <img src="./assets/images/icon-verbal.svg" alt="verbal icon" />
-                <p>Verbal</p>
-              </div>
-              <div class="category_score">
-                <span>61</span>
-                <span>/</span>
-                <span>100</span>
-              </div>
-            </div>
-
-            <div class="cate_category cate_category--blue">
-              <div class="category_heading">
-                <img src="./assets/images/icon-visual.svg" alt="visual icon" />
-                <p>Visual</p>
-              </div>
-              <div class="category_score">
-                <span>72</span>
-                <span>/</span>
-                <span>100</span>
-              </div>
-            </div>
-
           </div>
           <button class="btn_continue">Continue</button>
         </div>
@@ -102,5 +66,9 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Wee G</a>.
     </div>
-  --></body>
+    -->
+
+  <script src="script.js"></script>
+    
+  </body>
 </html>
