--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
       <div class="summary">
         <div class="summary_wrap">
           <h3 class="summary_title">Summary</h3>
-          <div class="summary_cate">
 
+          
+          <div class="summary_cate" id="iSumary">
+          </div>
+
+<!--
             <div class="cate_category cate_category--red">
               <div class="category_heading">
                 <img src="./assets/images/icon-reaction.svg" alt="reaction icon" />
@@ -52,7 +56,7 @@
                 <span>100</span>
               </div>
             </div>
-
+-->
           </div>
           <button class="btn_continue">Continue</button>
         </div>
